--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "author": "Victor Ambrozi <victorambrozi.dev@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "webpack --config webpack.config.js",
     "start": "node build/index.js",
     "dev": "ts-node-dev --ignore-watch node_modules src/index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "ts-loader": "^9.4.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.4"
-  },
-  "dependencies": {
+    "typescript": "^4.8.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
